--- a/components/Gallery.module.css
+++ b/components/Gallery.module.css
@@ -6,11 +6,13 @@
 	justify-content: space-between;
 }
 
+
 .image {
 	margin: 20px;
 	height: 200px;
 	width: auto;
-
+	max-width: 80%;
+	/* flex-shrink: 1; */
 	transition: 200ms ease;
 }
 
@@ -43,9 +45,26 @@
 	border-radius: 50%;
 }
 
+
+
+
+@media screen and (max-width: 1100px) {
+	.gallery {
+		justify-content: space-around;
+	}
+
+	.image {
+		height: 150px;
+	}
+}
+
 @media screen and (max-width: 576px) {
 	.gallery {
 		justify-content: space-around;
+	}
+
+	.image {
+		height: auto;
 	}
 
 	.spinner {
@@ -55,12 +74,5 @@
 
 	.endBuffer {
 		display: none;
-	}
-}
-
-
-@media screen and (max-width: 1100px) {
-	.gallery {
-		justify-content: space-around;
 	}
 }
