--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -119,6 +119,17 @@
 }
 
 
+@media screen and (max-width: 1250px) {
+    .navLinks{
+        position: absolute;
+        /* top: 500px; */
+        max-width: 500px;
+        width: 85vw;
+        transform: translateY(70px);
+        font-size: 1.5rem;
+    }
+}
+
 @media screen and (max-width: 576px) {
     .navLinks{
         flex-direction: column;
@@ -139,16 +150,5 @@
     @keyframes backTop {
         0% { opacity: 0; top: 0px}
         100% {opacity: 1; top: 0px}
-    }
-}
-
-
-@media screen and (max-width: 1100px) {
-    .navLinks{
-        position: absolute;
-        /* top: 500px; */
-        width: 85vw;
-        transform: translateY(70px);
-        font-size: 1.5rem;
     }
 }
